--- a/smart-calendar/src/app/shared/components/confirm-dialog/confirm-dialog.html
+++ b/smart-calendar/src/app/shared/components/confirm-dialog/confirm-dialog.html
@@ -11,7 +11,7 @@
       <p class="primary-message">{{ message }}</p>
       <p class="secondary-message" *ngIf="details">{{ details }}</p>
       
-      <div class="warning-box" *ngIf="type === 'warning' || type === 'danger'">
+      <div class="warning-box" *ngIf="type === 'destructive' || type === 'warning' || type === 'danger'">
         <mat-icon>warning</mat-icon>
         <span>Esta ação não pode ser desfeita</span>
       </div>
@@ -40,7 +40,7 @@
       <div class="checkbox-options" *ngIf="checkboxOptions && checkboxOptions.length > 0">
         <mat-checkbox *ngFor="let option of checkboxOptions; trackBy: trackByOption"
                      [(ngModel)]="option.checked"
-                     [disabled]="option.disabled">
+                     [disabled]="option.disabled || false">
           {{ option.label }}
         </mat-checkbox>
       </div>
@@ -56,7 +56,6 @@
     </button>
     
     <button mat-raised-button 
-            [color]="getConfirmButtonColor()"
             (click)="onConfirm()"
             [disabled]="!canConfirm() || isProcessing"
             class="confirm-btn">
