--- a/smart-calendar/src/assets/styles/_mixins.scss
+++ b/smart-calendar/src/assets/styles/_mixins.scss
@@ -197,10 +197,10 @@
 
 @mixin glass-card {
   @include card-base;
-  background: rgba(255, 255, 255, 0.05);
-  -webkit-backdrop-filter: blur();
-  backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(42, 0, 209, 0.15);
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  border: 1px solid rgba(26, 0, 149, 0.3);
   box-shadow: var(--shadow-glass);
 }
 
