--- a/smart-calendar/src/app/shared/components/header/header.html
+++ b/smart-calendar/src/app/shared/components/header/header.html
@@ -32,6 +32,14 @@
       <!-- Theme Toggle -->
       <app-theme-toggle></app-theme-toggle>
       
+      <!-- Settings -->
+      <button mat-icon-button 
+              class="action-btn settings-btn"
+              matTooltip="Configurações"
+              aria-label="Configurações">
+        <mat-icon>settings</mat-icon>
+      </button>
+      
       <!-- Notifications -->
       <button mat-icon-button 
               class="action-btn notifications-btn"
@@ -46,42 +54,29 @@
       </button>
       
       <!-- User Profile -->
-      <div class="user-profile" 
-           [matMenuTriggerFor]="userMenu"
-           matTooltip="Perfil"
-           role="button"
-           tabindex="0">
-        <div class="user-avatar">
-          <img *ngIf="user.avatar; else initials" 
-               [src]="user.avatar" 
-               [alt]="user.name || 'Avatar'"
-               class="avatar-img"
-               loading="lazy">
-          <ng-template #initials>
-            <span class="avatar-text">{{ getUserInitials() }}</span>
-          </ng-template>
-        </div>
-      </div>
+      <button mat-icon-button 
+              class="action-btn profile-btn"
+              [matMenuTriggerFor]="userMenu"
+              matTooltip="Meu Perfil"
+              aria-label="Meu Perfil">
+        <mat-icon>person</mat-icon>
+      </button>
     </div>
   </div>
   
   <!-- User Menu -->
   <mat-menu #userMenu="matMenu" class="user-dropdown">
     <button mat-menu-item (click)="onOpenProfile()">
-      <mat-icon>person</mat-icon>
+      <mat-icon>account_circle</mat-icon>
       <span>Meu Perfil</span>
     </button>
     <button mat-menu-item>
-      <mat-icon>settings</mat-icon>
-      <span>Configurações</span>
-    </button>
-    <button mat-menu-item>
-      <mat-icon>help</mat-icon>
+      <mat-icon>help_outline</mat-icon>
       <span>Ajuda</span>
     </button>
     <mat-divider></mat-divider>
     <button mat-menu-item (click)="onLogout()" class="logout-menu-item">
-      <mat-icon>logout</mat-icon>
+      <mat-icon>exit_to_app</mat-icon>
       <span>Sair</span>
     </button>
   </mat-menu>
